--- a/.gitignore
+++ b/.gitignore
@@ -62,3 +62,5 @@ Faria1998PlaneStress2d.cpp
 Faria1998PlaneStress2d.h
 Faria1998ThreeDimensional.cpp
 Faria1998ThreeDimensional.h
+
+# No commit, Just commit
